# sshpal

./: Cargo.toml  README.md
examples/: complete.sshpal.toml  minimal.sshpal.toml
scripts/: coverage.sh
src/: cli.rs  config.rs  health.rs  lib.rs  main.rs  paths.rs  process.rs  rpc.rs  sshpal-run.sh  tasks.rs
tests/: cli_smoke.rs  docker_remote.rs
