[package]
name = "sshpal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
axum = "0.8.4"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
futures-util = "0.3.31"
humantime = "2.2.0"
http = "1.3.1"
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shell-words = "1.1.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.23"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
serial_test = "3.2.0"
tempfile = "3.20.0"
